fixed portfolio responisve on mobile

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@
 
 	h2{
 		font-family: 'PT Mono', monospace;
+		font-size: 3vmin;
 	}
 
 	h3{
